[package]
name = "aria-bridge"
version.workspace = true
edition.workspace = true

[lib]
name = "aria_bridge"
crate-type = ["cdylib", "staticlib"]

[dependencies]
aria-database = { path = "../aria-database" }
aria-filesystem = { path = "../aria-filesystem" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
