[package]
name = "aria-filesystem"
version.workspace = true
edition.workspace = true

[lib]
name = "aria_filesystem"
crate-type = ["lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
walkdir = "2"
sha2 = "0.10"
crossbeam-channel = "0.5"
symphonia = { version = "0.5", features = [
    "default",
    "aac",
    "alac",
    "isomp4",
    "mkv",
    "vorbis",
] }
notify = { version = "6", features = ["macos_fsevent"] }

[dev-dependencies]
tempfile = "3"
